--- a/src/views/pages/home/secoes/depoimentos/_depoimentos.html
+++ b/src/views/pages/home/secoes/depoimentos/_depoimentos.html
@@ -1,6 +1,6 @@
 <section id="depoimentos">
   <div class="align-wrapper">
-    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+<!--    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>-->
 
     <div class="text">
       <h2>DO PASSADO AO FUTURO</h2>
@@ -13,7 +13,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-cila.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/kU_buyRunRY?si=vig1QWJWpyOTDZ3A"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -27,7 +28,12 @@
                   <img src="@images/depoimento-cila.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/EHmpmvDG8a4?si=6D0Z9Z0KaFlR7BHF">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/kU_buyRunRY?si=vig1QWJWpyOTDZ3A">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -38,7 +44,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-luciane.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/3lu5fbY3T0A?si=cooJ-Sv732EtJkyR"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -52,7 +59,12 @@
                   <img src="@images/depoimento-luciane.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/3lu5fbY3T0A?si=cooJ-Sv732EtJkyR">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/3lu5fbY3T0A?si=cooJ-Sv732EtJkyR">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -63,7 +75,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-marcia.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/modYDObSm7E?si=cHa2MD3qnBLho0Am"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -77,7 +90,12 @@
                   <img src="@images/depoimento-marcia.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/modYDObSm7E?si=cHa2MD3qnBLho0Am">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/modYDObSm7E?si=cHa2MD3qnBLho0Am">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -88,7 +106,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-mario.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/su3DWlFnsiE?si=UZjg4YVXBEIdazxS"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -102,7 +121,12 @@
                   <img src="@images/depoimento-mario.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/su3DWlFnsiE?si=UZjg4YVXBEIdazxS">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/su3DWlFnsiE?si=UZjg4YVXBEIdazxS">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -113,7 +137,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-patricia.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/5WOM8KhquVE?si=am_Lb4LvQWrltHda"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -127,7 +152,12 @@
                   <img src="@images/depoimento-patricia.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/5WOM8KhquVE?si=am_Lb4LvQWrltHda">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/5WOM8KhquVE?si=am_Lb4LvQWrltHda">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -138,7 +168,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-cristina.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/xxqc9nts6wg?si=hnDhSU9x1__0NHpQ"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -152,7 +183,12 @@
                   <img src="@images/depoimento-cristina.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/xxqc9nts6wg?si=hnDhSU9x1__0NHpQ">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/xxqc9nts6wg?si=hnDhSU9x1__0NHpQ">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -163,7 +199,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-felipe.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/It7uA9KRctM?si=rV2yC8f_704E1MJO"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -177,7 +214,12 @@
                   <img src="@images/depoimento-felipe.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/It7uA9KRctM?si=rV2yC8f_704E1MJO">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/It7uA9KRctM?si=rV2yC8f_704E1MJO">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -188,7 +230,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-maria-g.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/8lwm6b2LxTo?si=pRWOS8SFw1Dr1AFo"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -202,7 +245,12 @@
                   <img src="@images/depoimento-maria-g.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/8lwm6b2LxTo?si=pRWOS8SFw1Dr1AFo">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/8lwm6b2LxTo?si=pRWOS8SFw1Dr1AFo">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -213,7 +261,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-flavio.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/dGnZgTAwCoc?si=C52RhVLiuOtejjZJ"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -227,7 +276,12 @@
                   <img src="@images/depoimento-flavio.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/dGnZgTAwCoc?si=C52RhVLiuOtejjZJ">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/dGnZgTAwCoc?si=C52RhVLiuOtejjZJ">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -238,7 +292,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/thumb-eduardo.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/w4X1Vtk_xhE?si=Z2sjGg3cdEBUi51-"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -252,7 +307,12 @@
                   <img src="@images/depoimento-eduardo.jpg" />
                 </div>
               </div>
-              <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/w4X1Vtk_xhE?si=Z2sjGg3cdEBUi51-">Assistir ao vídeo</button>
+
+              <div class="actions">
+                <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/w4X1Vtk_xhE?si=Z2sjGg3cdEBUi51-">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span><i class="icon-reverse"></i></button>
+              </div>
             </div>
           </div>
         </div>
