--- a/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.html
+++ b/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.html
@@ -1,6 +1,6 @@
 <section id="fazemos-diferenca">
   <div class="align-wrapper">
-    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+<!--    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>-->
 
     <div class="row">
       <div class="column">
