--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
@@ -1,6 +1,6 @@
 <section id="linha-do-tempo">
   <div class="align-wrapper">
-    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+<!--    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>-->
 
     <div class="cabecalho">
       <div class="text">
