--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.html
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.html
@@ -1,6 +1,6 @@
 <section id="questoes-da-prova">
   <div class="align-wrapper">
-    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+<!--    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>-->
 
     <div class="text">
       <h2 class="proxima-nova-th">QUESTÕES DA PROVA</h2>
@@ -13,13 +13,13 @@
         <div id="options"></div>
       </div>
 
-      <div class="actions">
+      <div id="questions-options" class="actions">
         <div>
           <button id="back-button" class="hidden outline">voltar</button>
         </div>
 
         <div>
-          <span id="devolutiva">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,<br/> sed diam nonummy nibh euismod consectetuer</span>
+          <span id="devolutiva">Resposta do gabarito oficial do concurso em 1992.</span>
         </div>
 
         <div>
