--- a/src/assets/styles/pages/_default-layout.scss
+++ b/src/assets/styles/pages/_default-layout.scss
@@ -419,7 +419,7 @@ footer {
 .owl-theme {
   .owl-dots {
     width: fit-content;
-    margin: 30px auto 0 !important;
+    margin: 40px auto 0 !important;
     padding: 5px 20px;
     border: 1px solid #3f3f3f;
     display: flex;
@@ -427,6 +427,11 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    transform: scale(1.4);
+
+    @include mobile-tablet {
+      transform: scale(1.2);
+    }
 
     .owl-dot {
 
