--- a/src/views/pages/home/home.scss
+++ b/src/views/pages/home/home.scss
@@ -16,7 +16,7 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 80px; /* Ativa a rolagem suave */
   @include mobile-tablet {
-    scroll-padding-top: 0;
+    scroll-padding-top: 60px;
   }
 }
 
@@ -71,6 +71,7 @@ html {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    font-size: 2rem;
 
     &:before {
       font-size: 5.0rem;
@@ -83,6 +84,7 @@ html {
     transition-timing-function: ease-in-out;
     transform-style: preserve-3d;
     flex: 1;
+    border-radius: 50px;
 
     &.active {
       transform: rotateY(-180deg);
@@ -101,12 +103,23 @@ html {
       height: 100%;
       position: relative;
       transform: rotateY(0deg);
+      border-radius: 50px;
+      overflow: hidden;
+
+      &:before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .1);
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
 
       img {
         object-fit: cover;
         width: 100%;
         height: 100%;
-        border-radius: 50px;
       }
     }
 
@@ -120,8 +133,10 @@ html {
       flex-direction: column;
       background: #7d2b8a;
       padding: 50px;
-      border-radius: 50px;
       width: 100%;
+      border-radius: 50px;
+      overflow: hidden;
+      gap: 30px;
 
       @include mobile-tablet {
         padding: 20px;
@@ -135,11 +150,35 @@ html {
   }
 
 
+  .play {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translateX(-50%) translateY(-50%);
+
+    i:before {
+      color: #FFF;
+      font-size: 5.0rem;
+    }
+  }
+
 
   .reverse {
     position: absolute;
     bottom: 5%;
     right: 5%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color: #FFF;
+    gap: 15px;
+
+    span {
+      font-size: 2rem;
+    }
 
     i:before {
       color: #FFF;
@@ -147,11 +186,31 @@ html {
     }
   }
 
+  .actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 15px;
+
+    .spacer {
+      flex: 1;
+    }
+
+    .reverse {
+      position: relative;
+      bottom: auto;
+      right: auto;
+    }
+  }
+
   .membro {
     display: flex;
     flex-direction: row;
     gap: 30px;
-    margin-bottom: 30px;
+    //margin-bottom: 30px;
     width: 100%;
 
     @include mobile-tablet {
@@ -183,7 +242,7 @@ html {
         color: #84c0eb;
         font-size: 2.3rem;
         display: block;
-        margin-bottom: 10px;
+        //margin-bottom: 10px;
         line-height: normal;
       }
 
