--- a/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.scss
+++ b/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.scss
@@ -59,9 +59,14 @@
         color: transparent;
         line-height: 0;
         margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
         img {
           width: 100%;
+          max-width: 420px;
         }
       }
 
