--- a/src/views/pages/home/secoes/inicio/_inicio.html
+++ b/src/views/pages/home/secoes/inicio/_inicio.html
@@ -4,8 +4,12 @@
   </div>
 
   <div id="custom-controls">
+    <div class="spacer"></div>
+
     <button type="button" id="play-button" style="display: none;"><i class="icon-play"></i></button>
     <button type="button" id="pause-button"><i class="icon-pause"></i></button>
+    <div class="spacer"></div>
+    <button type="button" id="fullscreen-button"><i class="icon-fullscreen"></i></button>
   </div>
 </section>
 
