--- a/src/views/pages/home/secoes/inicio/_inicio.scss
+++ b/src/views/pages/home/secoes/inicio/_inicio.scss
@@ -1,3 +1,5 @@
+@import '@styles/abstracts/_mixins.scss';
+
 #inicio {
   display: flex;
   flex-direction: column;
@@ -6,6 +8,10 @@
   position: relative;
   background: #000;
   cursor: pointer;
+
+  @include mobile-tablet {
+    min-height: auto;
+  }
 
 
   &:hover #custom-controls {
@@ -18,7 +24,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    pointer-events: none;
     overflow: hidden;
     aspect-ratio: 16 / 9;
 
@@ -30,15 +35,24 @@
       width: 300%;
       height: 100%;
       margin-left: -100%;
+      pointer-events: none;
+
+      body.fullscreen & {
+        pointer-events: auto;
+      }
+
 
       .ytp-show-cards-title {
         display: none !important;
       }
+
+      @include mobile-tablet {
+        //width: 100%;
+        //height: 100%;
+        //margin: 0;
+      }
     }
-
   }
-
-
 
   #custom-controls {
     display: flex;
@@ -49,14 +63,19 @@
     bottom: 0;
     width: 100%;
     justify-content: center;
-    padding: 10px 0;
+    padding: 10px;
     gap: 10px;
     opacity: 0;
     transition: all ease-in-out .2s;
+    cursor: auto;
 
     i:before {
       color: #FFF;
       font-size: 3.5rem;
+    }
+
+    .spacer {
+      flex: 1;
     }
   }
 
