--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
@@ -24,6 +24,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 50px;
+    gap: 30px;
 
     @include mobile-tablet {
       flex-direction: column;
@@ -65,6 +66,12 @@
         font-size: 2.2rem;
         color: #FFF;
         text-decoration: none;
+
+        &:hover {
+          span {
+            text-decoration: underline;
+          }
+        }
 
         i:before {
           font-size: 56px;
