--- a/src/views/pages/home/secoes/novo-tempo/_novo-tempo.html
+++ b/src/views/pages/home/secoes/novo-tempo/_novo-tempo.html
@@ -1,6 +1,6 @@
 <section id="novo-tempo">
   <div class="align-wrapper">
-    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+<!--    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>-->
 
     <div class="text">
       <h2 class="proxima-nova-th">UM NOVO TEMPO PARA O MPU</h2>
@@ -13,7 +13,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/depoimento-joao.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/TIBEDlqjs00?si=92Ry4xbA9_YXXMIr"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -30,7 +31,12 @@
 
               <div class="info">
                 <p class="proxima-nova-md">Membro do MPF desde 198  4, João Batista foi o primeiro procurador da República a exercer o cargo de secretário-geral do MPU. Durante a sua gestão, foi realizado o primeiro concurso público de servidores do Ministério Público da União.</p>
+              </div>
+
+              <div class="actions">
                 <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/TIBEDlqjs00?si=92Ry4xbA9_YXXMIr">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span></span><i class="icon-reverse"></i></button>
               </div>
             </div>
           </div>
@@ -41,7 +47,8 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/depoimento-eliana.jpg" />
-              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
+              <button type="button" class="play open-modal" data-video="https://www.youtube.com/embed/EHmpmvDG8a4?si=6D0Z9Z0KaFlR7BHF"><i class="icon-play"></i></button>
+              <button type="button" class="reverse"><span>Informações</span> <i class="icon-reverse"></i></button>
             </div>
 
             <div class="card-back">
@@ -58,8 +65,12 @@
 
               <div class="info">
                 <p class="proxima-nova-md">Eliana Torelly é subprocuradora-geral da República e coordenadora da 6ª Câmara de Coordenação e Revisão. Sua carreira no MPF começou em 1993.</p>
+              </div>
 
+              <div class="actions">
                 <button type="button" class="open-modal bt-video proxima-nova-md" data-video="https://www.youtube.com/embed/EHmpmvDG8a4?si=6D0Z9Z0KaFlR7BHF">Assistir ao vídeo</button>
+                <div class="spacer"></div>
+                <button type="button" class="reverse"><span>Voltar</span></span><i class="icon-reverse"></i></button>
               </div>
             </div>
           </div>
