--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
@@ -169,6 +169,9 @@
         background: no-repeat;
         color: #414042;
 
+        br {
+          display: block;
+        }
 
         button {
           width: fit-content;
@@ -265,7 +268,7 @@
 
 
   .hidden {
-    display: none;
+    display: none !important;
   }
 
   .actions {
@@ -273,17 +276,29 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 0 20px 20px;
+    flex-wrap: wrap;
+    gap: 15px;
+
 
     > div {
+      display: flex;
       min-width: 110px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
 
-      @include mobile-tablet {
-        min-width: 50%;
+      &:empty {
+        @include mobile-tablet {
+          display: none;
+
+        }
       }
 
       &:nth-child(2) {
+        min-height: 40px;
         @include mobile-tablet {
-          display: none;
+          order: 3;
+          width: 100%;
         }
       }
     }
@@ -301,11 +316,6 @@
     font-size: 1.8rem;
     text-align: center;
     display: block;
-    flex: 1;
-
-    @include mobile-tablet {
-      display: none;
-    }
 
     &.hidden {
       display: none;
