--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -77,6 +77,10 @@ body {
   z-index: 9999;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
+  body.contraste & {
+    background: var.$contraste-background-color;
+  }
+
   .align-wrapper {
     padding: 15px clamp(30px, 3.91%, 50px);
 
