--- a/src/views/pages/home/secoes/inicio/_inicio.scss
+++ b/src/views/pages/home/secoes/inicio/_inicio.scss
@@ -64,7 +64,6 @@
     width: 100%;
     justify-content: center;
     padding: 10px;
-    gap: 10px;
     opacity: 0;
     transition: all ease-in-out .2s;
     cursor: auto;
@@ -75,6 +74,8 @@
     }
 
     .spacer {
+      min-width: 32px;
+      min-height: 32px;
       flex: 1;
     }
   }
