--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
@@ -168,6 +168,7 @@
         align-items: center;
         background: no-repeat;
         color: #414042;
+        padding: 30px;
 
         br {
           display: block;
