--- a/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.html
+++ b/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.html
@@ -11,7 +11,7 @@
               <h2 class="proxima-nova-th">UM NOVO TEMPO PARA O MPU</h2>
 
               <div class="actions">
-                <a href="#">
+                <a class="open-pdf" href="assets/docs/graficos.pdf">
                   <span>Ver em PDF</span>
                   <i class="icon-download"></i>
                 </a>
@@ -36,7 +36,7 @@
 
             <div class="align">
               <ul class="labels">
-                <li class="bullet" data-categoria="inscritos">INSCRITOS</li>
+                <li class="bullet active" data-categoria="inscritos">INSCRITOS</li>
                 <li class="bullet" data-categoria="candidatos">CANDIDATOS</li>
                 <li class="bullet" data-categoria="aprovados">APROVADOS</li>
                 <li class="bullet" data-categoria="nomeados">NOMEADOS</li>
@@ -83,7 +83,7 @@
               <h2 class="proxima-nova-th">DESCENTRALIZAÇÃO E CAPILARIDADE</h2>
 
               <div class="actions">
-                <a href="#">
+                <a class="open-pdf" href="assets/docs/graficos.pdf">
                   <span>Ver em PDF</span>
                   <i class="icon-download"></i>
                 </a>
@@ -398,7 +398,7 @@
               <h2 class="proxima-nova-th">CONSOLIDAÇÃO & CRESCIMENTO</h2>
 
               <div class="actions">
-                <a href="#">
+                <a class="open-pdf" href="assets/docs/graficos.pdf">
                   <span>Ver em PDF</span>
                   <i class="icon-download"></i>
                 </a>
