--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
@@ -7,12 +7,12 @@
         <h2 class="title proxima-nova-th">LINHA DO TEMPO - CONCURSO 1993</h2>
       </div>
 
-      <div class="actions">
-        <a href="#">
-          <span>Baixar em PDF</span>
-          <i class="icon-download"></i>
-        </a>
-      </div>
+<!--      <div class="actions">-->
+<!--        <a href="#">-->
+<!--          <span>Baixar em PDF</span>-->
+<!--          <i class="icon-download"></i>-->
+<!--        </a>-->
+<!--      </div>-->
     </div>
 
     <ul class="slides owl-carousel owl-theme">
