Adicionando redes sociais

--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -64,17 +64,17 @@
         <strong>Siga nas redes</strong>
 
         <ul>
-          <li class="facebook"><a href="#this" target="_blank">Facebook</a></li>
-          <li class="instagram"><a href="#this" target="_blank">Instagram</a></li>
-          <li class="twitter"><a href="#this" target="_blank">Twitter</a></li>
-          <li class="youtube"><a href="#this" target="_blank">Youtube</a></li>
-          <li class="whatsapp"><a href="#this" target="_blank">Whatsapp</a></li>
-          <li class="linkedin"><a href="#this" target="_blank">Linkedin</a></li>
+          <li class="facebook"><a href="https://www.facebook.com/MPFederal" target="_blank">Facebook</a></li>
+          <li class="instagram"><a href="https://www.instagram.com/mpf_oficial/" target="_blank">Instagram</a></li>
+          <li class="twitter"><a href="https://x.com/mpf_pgr" target="_blank">Twitter</a></li>
+          <li class="youtube"><a href="https://www.youtube.com/@canalMPF" target="_blank">Youtube</a></li>
+          <li class="whatsapp"><a href="https://www.whatsapp.com/channel/0029VaSEPDHId7nRVXD6nV27/" target="_blank">Whatsapp</a></li>
+          <li class="linkedin"><a href="https://www.linkedin.com/company/mpf-oficial/" target="_blank">Linkedin</a></li>
         </ul>
       </div>
 
       <div class="mpf">
-        <h4><a href="#this" target="_blank" title="Ministério público federal">Ministério público federal</a></h4>
+        <h4><a href="https://www.mpf.mp.br/" target="_blank" title="Ministério público federal">Ministério público federal</a></h4>
       </div>
     </div>
   </div>
