--- a/src/assets/styles/pages/_default-layout.scss
+++ b/src/assets/styles/pages/_default-layout.scss
@@ -60,7 +60,7 @@ body {
     gap: 20px;
 
     li {
-      button {
+      button, a {
         transition: all ease-in-out .2s;
 
         &:hover {
