--- a/src/views/partials/accessibility.html
+++ b/src/views/partials/accessibility.html
@@ -1,8 +1,8 @@
 <div id="accessibility">
     <div class="align-wrapper">
         <ul>
-            <li><button type="button" data-action="libras" title="Libras"><i class="icon-libras"></i></button></li>
-            <li><button type="button" data-action="disabled" title="Acessibilidade"><i class="icon-disabled"></i></button></li>
+            <li><a href="http://www.vlibras.gov.br/" target="_blank" title="Libras"><i class="icon-libras"></i></a></li>
+            <li><a href="https://www.mpf.mp.br/accessibility-info" target="_blank" title="Acessibilidade"><i class="icon-disabled"></i></a></li>
             <li><button type="button" data-action="font-plus" title="Aumentar fonte"><i class="icon-plus-font"></i></button></li>
             <li><button type="button" data-action="font-minus" title="Diminuir fonte"><i class="icon-minus-font"></i></button></li>
             <li><button type="button" data-action="contrast" title="contraste"><i class="icon-contrast"></i></button></li>
