--- a/src/views/pages/home/secoes/inicio/_inicio.scss
+++ b/src/views/pages/home/secoes/inicio/_inicio.scss
@@ -47,9 +47,9 @@
       }
 
       @include mobile-tablet {
-        //width: 100%;
-        //height: 100%;
-        //margin: 0;
+        width: 100%;
+        height: 100%;
+        margin: 0;
       }
     }
   }
